updating angular and refactoring to use "@if" instead of "NgIf"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <app-header></app-header>
-  <router-outlet></router-outlet>
-  <app-footer></app-footer>
-</div>
+<app-header></app-header>
+@if (showAddTask) {
+  <app-add-task></app-add-task>
+}
+<app-tasks></app-tasks>
