--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -1,15 +1,15 @@
-<form *ngIf="showAddTask" class="add-form" (ngSubmit)="onSubmit()">
-    <div class="form-control">
-        <label for="text">Task</label>
-        <input type="text" name="text" [(ngModel)]="text" id="text" placeholder="Add Task">
-    </div>
-    <div class="form-control">
-        <label for="day">Day & Time</label>
-        <input type="text" name="day" [(ngModel)]="day" id="day" placeholder="Add Day & Time">
-    </div>
-    <div class="form-control form-control-check">
-        <label for="reminder">Set Reminder</label>
-        <input type="checkbox" name="reminder" [(ngModel)]="reminder" id="reminder" />
-    </div>
-    <input type="submit" value="Save Task" class="btn btn-block" />
+<form *ngIf="showAddTask" (ngSubmit)="onSubmit()" class="add-form">
+  <div>
+    <label>Task</label>
+    <input type="text" [(ngModel)]="text" name="text" placeholder="Add Task" />
+  </div>
+  <div>
+    <label>Day & Time</label>
+    <input type="text" [(ngModel)]="day" name="day" placeholder="Add Day & Time" />
+  </div>
+  <div>
+    <label>Set Reminder</label>
+    <input type="checkbox" [(ngModel)]="reminder" name="reminder" />
+  </div>
+  <input type="submit" value="Save Task" class="btn btn-block" />
 </form>
