--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,4 @@
 <header>
-    <h1>{{title}}</h1>
-    <app-button 
-        *ngIf="hasRoute('/')" 
-        color="{{ showAddTask ? 'red' : 'green'}}" 
-        text="{{ showAddTask ? 'Close' : 'Add'}}"  
-        (btnClick)="toggleAddTask()"
-    ></app-button>
+  <h1>Task Tracker</h1>
+  <button (click)="onAddClick()">Add Task</button>
 </header>
